--- a/app/pom.xml
+++ b/app/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com</groupId>
-	<artifactId>app-fastfood</artifactId>
+	<artifactId>app-fastfood-producao</artifactId>
 	<version>0.0.1</version>
-	<name>app-fastfood</name>
+	<name>app-fastfood-producao</name>
 	<description>FastFood Application</description>
 	<properties>
 		<java.version>17</java.version>
