--- a/app/pom.xml
+++ b/app/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<maven.compiler.release>17</maven.compiler.release>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
         	<sonar.organization>cezacai</sonar.organization>
         	<sonar.projectKey>cezacai_app-fastfood-producao</sonar.projectKey>
 	</properties>
