--- a/app/pom.xml
+++ b/app/pom.xml
@@ -18,6 +18,8 @@
 		<maven.compiler.release>17</maven.compiler.release>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
         	<sonar.organization>cezacai</sonar.organization>
+		<sonar.branch.name>main</sonar.branch.name>
+		<sonar.projectKey>cezacai_app-fastfood-pagamentos</sonar.projectKey>	
 	</properties>
 	<dependencies>
 		<dependency>
