--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
+		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com</groupId>
 	<artifactId>app-fastfood-producao</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>app-fastfood-producao</name>
 	<description>FastFood Application</description>
 	<properties>
@@ -18,7 +18,6 @@
 		<maven.compiler.release>17</maven.compiler.release>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
         	<sonar.organization>cezacai</sonar.organization>
-		<sonar.branch.name>main</sonar.branch.name>
 		<sonar.projectKey>cezacai_app-fastfood-pagamentos</sonar.projectKey>	
 	</properties>
 	<dependencies>
