--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,13 +113,13 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: caikemury
-          password: shakiralanadelrey
+          username: montjon
+          password: Davi@2014
 
       - name: DOCKER BUILD AND PUSH
         run: |
-          docker build -t caikemury/app-fastfood-producao.jar:latest --build-arg trustStorePassword=a .
-          docker push caikemury/app-fastfood-producao.jar:latest
+          docker build -t montjon/app-fastfood-producao.jar:latest --build-arg trustStorePassword=a .
+          docker push montjon/app-fastfood-producao.jar:latest
 
   deploy-eks:
     runs-on: ubuntu-latest
